fixed many spacing and format issues

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,39 +1,40 @@
 @media only screen and (min-width: 600px) {
 
-    header,
-    main,
-    nav,
-    footer {
-        max-width: 900px;
-        margin: 0 auto;
-        /* above: the margin written like this centers the contents */
-    }
+  header,
+  main,
+  nav,
+  footer {
+    max-width: 900px;
+    margin: 0 auto;
+    /* above: the margin written like this centers the contents */
+  }
 
-    header {
-        grid-template-columns: 24px auto;
-        /* above: removes 3rd column containing the hamburger */
-    }
+  header {
+    grid-template-columns: 24px auto;
+    /* above: removes 3rd column containing the hamburger */
+  }
 
-    .hamburger {
-        display: none;
-    }
+  .hamburger {
+    display: none;
+  }
 
-    .navigation {
-        display: block;
-    }
+  .navigation {
+    display: block;
+  }
 
   .navigation ul {
     display: flex;
   }
 
   .navigation a {
-  border: none;
+    border: none;
   }
 
   /* -------------------------25 -  MAIN GRID LAYOUT ------------------------- */
   main {
-      display: grid;
-      grid-template-columns: 3fr 2fr;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 1rem;
   }
 
   h1 {
@@ -44,8 +45,18 @@
     grid-column: span 2;
   }
 
-  main p {
-    grid-column: span 2;
+  .about-section {
+    display: flex;
+    flex-direction: column;
   }
-}
 
+  .about-section div {
+    flex-grow: 1;
+  }
+
+  /* BUTTONS */
+  .course-button {
+    padding: 8px 70px;
+  }
+
+}
